--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
@@ -42,4 +43,9 @@ section{
     background-image: url(../images/top-banner.png);
     background-size: cover;
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(../images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
