--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,33 @@
-/* *{
-    margin: 0;
-    padding: 0;
-} */
-body{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-}
-a{
-    text-decoration: none;
-}
-/* img{
-    width: 100%;
-} */
+
 h1{
     font-size: 50px;
-}
-.peter-color{
-    color: orange;
-}
-.flexible-container{
-    display: flex;
-    margin-bottom: 150px;
-}
-.half-width{
-    width: 50%;
-    padding-left: 2%;
-}
-.half-width img{
-    width: 80%;
-}
-.btn{
-    background: linear-gradient(to right, lightsalmon, tomato);
-    padding: 10px 40px;
-    color: #fff;
-    border-radius: 5px;
-    transition: .5s;
-}
-.btn:hover{
-    background: linear-gradient(to left, lightsalmon, tomato);
-}
-.top-banner{
-    background-image: url(../images/top-banner.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.dream-big{
-    background-image: url(../images/dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right;
 }
 h2{
     font-size: 40px;
 }
-.experience-item{
-    width: 40%;
-    margin: 0 5%;
-    box-shadow: 10px 10px 40px #ddd;
-    padding: 5px 20px;
-    
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0
 }
-/* .frond-end{
-    border-left: 7px solid;
-    border-image: linear-gradient(blue, cyan);
-    border-image-slice: 1;
-} */
-.experience-aria{
-    background-image: url(../images/exp-bg.png);
+.flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
+}
+.top-part{
+    background-image: url(../images/top-banner.png);
     background-repeat: no-repeat;
-    background-position: left;
 }
-#frond-end{
-    border-left: 7px solid blue;
+.petercolor{
+    color: orange;
 }
-#back-end{
-    border-left: 7px solid tomato;
+.text-color{
+    color: dimgray;
 }
-footer p{
-    text-align: center;
+.half-width{
+    width: 40%;
+}
+.half-width img{
+    width: 95%;
 }
