--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,17 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10%;
+    gap: 6%;
+}
+.btn{
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+    text-decoration: none;
+    padding: .6em 2.5em;
+    font-size: 1.1rem;
+    color: #fff;
+    border-radius: 5px;
+    display: inline-block;
+    margin-top: 20px;
 }
 .top-part{
     background-image: url(../images/top-banner.png);
@@ -30,4 +40,27 @@ body{
 }
 .half-width img{
     width: 95%;
+}
+.middle-part{
+    background-image: url(../images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.card{
+    box-shadow: 5px 7px 20px gray;
+    padding: 1.5rem;
+    min-height: 400px;
+}
+.top-part,
+.middle-part,
+.bottom-part{
+    margin-bottom: 150px;
+}
+.bottom-part{
+    background-image: url(../images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#fronend{
+    border-left: 7px solid blue;
 }
